Fix QModbusDataUnit inconsistent signedness for params and return values

Fixes: QTBUG-73743
Change-Id: I49f71488a80cc008bdcfda9c478a956b4151c2e3
Reviewed-by: Sona Kurazyan <sona.kurazyan@qt.io>